--- a/demo.html
+++ b/demo.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>progressive-image.js demonstration</title>
+<title>progressive-image.js</title>
 <meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="css/demo.css">
-<link rel="stylesheet" href="css/progressive-image.min.css">
+<link rel="stylesheet" href="src/demo.css">
+<link rel="stylesheet" href="src/css/progressive-image.css">
 </head>
 <body>
 
@@ -13,11 +13,13 @@
 
   <article>
 
-    <h1>progressive-image.js demonstration</h1>
+    <h1>progressive-image.js</h1>
+
+    <p><a href="https://github.com/craigbuckler/progressive-image.js"><strong>GitHub</strong></a> | <a href="https://www.npmjs.com/package/progressive-image.js"><strong>npm</strong></a> | <a href="https://gum.co/vIjey"><strong>donate</strong></a> | <a href="https://twitter.com/craigbuckler">@craigbuckler</a> | <a href="https://craigbuckler.com/">craigbuckler.com</a></p>
 
     <p><code>progressive-image.js</code> implements a lazy-loading progressive image similar to those seen on <a href="https://code.facebook.com/posts/991252547593574/the-technology-behind-preview-photos/">Facebook</a> and <a href="https://jmperezperez.com/medium-image-progressive-loading-placeholder/">Medium</a>. A very small, blurred image is replaced with the full-resolution equivalent when the element is scrolled into view.</p>
 
-    <p>Please use the code as you wish - <a href="https://twitter.com/craigbuckler">tweet me @craigbuckler</a> if you find it useful. <a href="https://github.com/craigbuckler/progressive-image.js">Download from GitHub&hellip;</a></p>
+    <p>Please use the code as you wish. <a href="https://twitter.com/craigbuckler">Tweet me @craigbuckler</a> if you find it useful and <a href="https://gum.co/vIjey">donate toward development</a> if you use it commercially.</p>
 
     <a href="https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/mountain.jpg" data-srcset="https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/400x/mountain.jpg 400w, https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/800x/mountain.jpg 800w, https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/mountain.jpg 1600w" class="primary progressive replace">
       <img src="https://ucarecdn.com/1b73ebf8-b2d6-40cc-abd6-945d4df883c9/-/resize/32x/-/grayscale/-/quality/lightest/mountain.jpg" class="preview" alt="mountain" />
@@ -27,15 +29,13 @@
       <img src="https://ucarecdn.com/b86e2dd6-fb4d-49bb-93ff-86b596a69fcb/-/resize/32x/-/quality/lightest/cave.jpg" class="preview" alt="cave" />
     </a>
 
-    <p>Benefits:</p>
-
     <ul>
       <li>saves unnecessary bandwidth</li>
       <li>fast loading, high performance, images loaded on view</li>
       <li>supports any image type (JPEG photographs are most appropriate)</li>
       <li>supports responsive images (<code>srcset</code> and <code>sizes</code> attributes)</li>
       <li>supports CSS background images</li>
-      <li>small: 1,300 bytes of JavaScript, 445 bytes of CSS (minified)</li>
+      <li>small: 1,300 bytes of JavaScript, 440 bytes of CSS (minified)</li>
       <li>any CSS reveal effect can be applied</li>
       <li>no external dependencies - works with any framework</li>
       <li>works in all modern browsers (IE10+)</li>
@@ -55,8 +55,10 @@
 
     <p>The page must load the CSS and JavaScript. It can be placed anywhere on the page but, typically, the CSS is loaded in the <code>&lt;head&gt;</code> and the JS is loaded just before the closing <code>&lt;/body&gt;</code> tag:</p>
 
-    <pre><code>&lt;link rel=&quot;stylesheet&quot; href=&quot;css/progressive-image.min.css&quot;&gt;
-&lt;script src=&quot;js/progressive-image.min.js&quot;&gt;&lt;/script&gt;</code></pre>
+    <pre><code>&lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/progressive-image.js@1.3.0/dist/progressive-image.css&quot;&gt;
+&lt;script src=&quot;https://cdn.jsdelivr.net/npm/progressive-image.js@1.3.0/dist/progressive-image.js&quot;&gt;&lt;/script&gt;</code></pre>
+
+    <p>CDN URLs are shown above but you can also <code>npm i progressive-image.js</code> to install via npm and use a bundler.</p>
 
     <p>The simplest progressive image is a link to the full-size graphic around the preview. Note the <code>progressive</code> and <code>replace</code> classes on the link and the <code>preview</code> class on the image.</p>
 
@@ -174,6 +176,6 @@
 
 </main>
 
-<script src="js/progressive-image.min.js"></script>
+<script src="src/js/progressive-image.js"></script>
 </body>
 </html>
